// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Badge > should render 1`] = `
<div>
  <span
    class="flex border-2 rounded-full justify-center items-center align-middle bg-theme-background css-1jo8u8k"
  >
    <span />
  </span>
</div>
`;

exports[`Badge > should render with icon 1`] = `
<div>
  <span
    class="flex border-2 rounded-full justify-center items-center align-middle bg-theme-background css-1jo8u8k"
  >
    <div
      class="css-15txs7d"
      height="10"
      width="10"
    />
    <span />
  </span>
</div>
`;

exports[`Badge > should render with position 'bottom' 1`] = `
<div>
  <span
    class="flex border-2 rounded-full justify-center items-center align-middle bg-theme-background css-1rcn4kd"
  >
    <div
      class="css-15txs7d"
      height="10"
      width="10"
    />
    <span />
  </span>
</div>
`;

exports[`Badge > should render with position 'bottom-left' 1`] = `
<div>
  <span
    class="flex border-2 rounded-full justify-center items-center align-middle bg-theme-background css-ye1fw6"
  >
    <div
      class="css-15txs7d"
      height="10"
      width="10"
    />
    <span />
  </span>
</div>
`;

exports[`Badge > should render with position 'bottom-right' 1`] = `
<div>
  <span
    class="flex border-2 rounded-full justify-center items-center align-middle bg-theme-background css-1jo8u8k"
  >
    <div
      class="css-15txs7d"
      height="10"
      width="10"
    />
    <span />
  </span>
</div>
`;

exports[`Badge > should render with position 'left' 1`] = `
<div>
  <span
    class="flex border-2 rounded-full justify-center items-center align-middle bg-theme-background css-pl41zd"
  >
    <div
      class="css-15txs7d"
      height="10"
      width="10"
    />
    <span />
  </span>
</div>
`;

exports[`Badge > should render with position 'right' 1`] = `
<div>
  <span
    class="flex border-2 rounded-full justify-center items-center align-middle bg-theme-background css-k94wca"
  >
    <div
      class="css-15txs7d"
      height="10"
      width="10"
    />
    <span />
  </span>
</div>
`;

exports[`Badge > should render with position 'top' 1`] = `
<div>
  <span
    class="flex border-2 rounded-full justify-center items-center align-middle bg-theme-background css-i72qo"
  >
    <div
      class="css-15txs7d"
      height="10"
      width="10"
    />
    <span />
  </span>
</div>
`;

exports[`Badge > should render with position 'top-left' 1`] = `
<div>
  <span
    class="flex border-2 rounded-full justify-center items-center align-middle bg-theme-background css-9ijlrj"
  >
    <div
      class="css-15txs7d"
      height="10"
      width="10"
    />
    <span />
  </span>
</div>
`;

exports[`Badge > should render with position 'top-right' 1`] = `
<div>
  <span
    class="flex border-2 rounded-full justify-center items-center align-middle bg-theme-background css-31xkyx"
  >
    <div
      class="css-15txs7d"
      height="10"
      width="10"
    />
    <span />
  </span>
</div>
`;

exports[`Badge > should render with size 'lg' 1`] = `
<div>
  <span
    class="flex border-2 rounded-full justify-center items-center align-middle bg-theme-background css-9adppv"
  >
    <div
      class="css-15txs7d"
      height="10"
      width="10"
    />
    <span />
  </span>
</div>
`;

exports[`Badge > should render with size 'md' 1`] = `
<div>
  <span
    class="flex border-2 rounded-full justify-center items-center align-middle bg-theme-background css-1jo8u8k"
  >
    <div
      class="css-15txs7d"
      height="10"
      width="10"
    />
    <span />
  </span>
</div>
`;
